--- a/docs/08.01 - Monitoring-Azure-DevOps Notifications and Service Hooks.md
+++ b/docs/08.01 - Monitoring-Azure-DevOps Notifications and Service Hooks.md
@@ -26,7 +26,7 @@ Once configured, we can now **notify the team based on any work item field such 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Subscription.AreaPath.Example.PNG" style="zoom:50%;" />
 
-[**Subscriptions**](https://docs.microsoft.com/en-us/azure/devops/notifications/concepts-events-and-notifications?view=azure-devops) can also be used for updates to the code base, helpful for when we need to track changes and requests for peer reviews. If Git is used for source control management, each commit and pull request can be subscribed to.
+[**Subscriptions**](https://docs.microsoft.com/en-us/azure/devops/notifications/concepts-events-and-notifications?view=azure-devops) can also be used for updates to the code base, helpful for when we need to **track changes and requests for peer reviews**. If Git is used for source control management, **<u>each commit and pull request can be subscribed to.</u>**
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Notifications-Subscriptions-Code.JPG" style="zoom:50%;" />
 
@@ -42,23 +42,23 @@ Example email of a **pending deployment approval**:
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Email-Azure-Pipelines-Notifications-Thread.JPG" style="zoom:50%;" />
 
-Each notification can be scoped to a particular role or stakeholder which can help control clutter. The below image shows how the "Deliver to" field can be fine tuned to team or project members or even custom email addresses distribution lists. 
+Each notification can be scoped to a particular role or stakeholder which can help control clutter. The below image shows how the "***Deliver to***" field can be fine tuned to team or project members or even custom email addresses distribution lists. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Notifications-Subscriptions-DeliverTo.JPG" style="zoom:50%;" />
 
-The final option is to use SOAP to deliver these same messages via an API call. I haven't used this particular feature and I would recommend if interested in API integration to continue reading. Below we will cover using Service Hooks for notifications. 
+The final option is to use SOAP to deliver these same messages via an API call. I haven't used this particular feature and I would recommend if interested in API integration to continue reading. **<u>Below we will cover using Service Hooks for notifications.</u>** 
 
 #### How are recipients determined?
 
-[Email notifications can be scoped to custom personal addresses, teams and groups](https://docs.microsoft.com/en-us/azure/devops/notifications/concepts-email-recipients?view=azure-devops). As the initiator of a particular event, you can void being sent a notification by checking the "Skip initiator" option. I would set this option for items like work items but consider leaving on for pull requests or builds.
+[Email notifications can be scoped to custom personal addresses, teams and groups](https://docs.microsoft.com/en-us/azure/devops/notifications/concepts-email-recipients?view=azure-devops). As the initiator of a particular event, you can void being sent a notification by checking the "***Skip initiator***" option. I would set this option for items like work items but consider leaving on for pull requests or builds.
 
 ## Service Hooks
 
-[**Service Hooks**](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops) are a great way of staying informed and informing others of events happening within **Azure DevOps** allowing you to be freed up to focus on other things. Examples include **pushing notifications to your teams' mobile devices**, **notifying team members on Microsoft Teams** or even **invoking Microsoft Power Automate flows**. Services can include other build and release platforms (i.e. Jenkins and Slack), Collaboration tools like Office 365, Customer Support interfaces like UserVoice and Integration services (Azure Service Bus, Azure Storage, Zapier, etc). 
+[**Service Hooks**](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops) are a great way of staying informed and informing others of events happening within **Azure DevOps** allowing you to be freed up to focus on other things. Examples include **pushing notifications to your teams' mobile devices**, **notifying team members on Microsoft Teams** or even **invoking Microsoft Power Automate flows**. Services can include other build and release platforms (i.e. Jenkins and Slack), Collaboration tools like **Office 365**, Customer Support interfaces like **UserVoice** and Integration services (**Azure Service Bus, Azure Storage, Zapier**, etc). 
 
 ![](https://docs.microsoft.com/en-us/azure/devops/service-hooks/_img/service-hooks.png?view=azure-devops)
 
-When an **event** occurs in Azure DevOps Services or TFS, its content is compared with every **subscription** of that event type. If the subscription's filter conditions are met by the event, a notification is generated. **A notification is generated for every subscription/event match.** In the example below, the service hook is configured to send a consumer the "***Build Completed***" event.
+When an **event** occurs in **Azure DevOps Services or TFS**, its content is compared with every **subscription** of that event type. If the subscription's filter conditions are met by the event, a notification is generated. **A notification is generated for every subscription/event match.** In the example below, the service hook is configured to send a consumer the "***Build Completed***" event.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/ServiceHooks-Events-OverviewA.JPG"  />
 
@@ -92,35 +92,33 @@ Notice the event type "***ms.vss-release.deplyment-started-event***" signaling t
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ServiceHooks-AzureServiceBus-ServiceBusExplorer-ReleaseCompleted.JPG" style="zoom:50%;" />
 
-As highlighted above, the *EventType* field contains what event happened and can help identify and differentiate between events. Included in the release is a markdown message that can be used as part of our release notes. The createdDate for both can help determine the length of the deployment of our Power Platform artifacts.
+As highlighted above, the ***EventType*** field contains what event happened and can help identify and differentiate between events. Included in the release is a markdown message that can be used as part of our release notes. The ***createdDate*** for both can help determine the length of the deployment of our **Power Platform** artifacts.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/DeploymentEvents.gif" style="zoom:50%;" />
 
 ### Considerations for Service Hooks
 
-**Service Hooks**, like all services within Azure DevOps can be altered using the Azure DevOps REST API. [The ability to test notifications](https://docs.microsoft.com/en-us/rest/api/azure/devops/hooks/notifications/create?view=azure-devops-rest-5.1) will be helpful as you explore how events are triggers and the payload associated with each event.
+**Service Hooks**, like all services within **Azure DevOps** can be altered [using the **Azure DevOps REST API**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---using-the-rest-api-to-monitor-pipelines). [The ability to test notifications](https://docs.microsoft.com/en-us/rest/api/azure/devops/hooks/notifications/create?view=azure-devops-rest-5.1) will be helpful as you explore how events are triggers and the payload associated with each event.
 
 ## Web Hooks
 
-**Web Hooks**, used by Service Hooks, allow for publishing messages and events to any type of service interested in the Power Apps DevOps process. Azure DevOps provides the ability to integrate with a [generic web hook](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/webhooks?view=azure-devops) that may not be available in the Visual Studio Marketplace. Web Hooks can be used to deliver messages to low code solutions such as Power Automate or Azure Logic Apps. They can also be used for development platforms such as Azure Functions, allowing for usage of the Azure DevOps SDK as well as other toolkits and frameworks.
+**Web Hooks**, used by Service Hooks, allow for publishing messages and events to any type of service interested in the **Power Apps** DevOps process. **Azure DevOps** provides the ability to integrate with a [generic web hook](https://docs.microsoft.com/en-us/azure/devops/service-hooks/services/webhooks?view=azure-devops) that may not be available in the **Visual Studio Marketplace**. Web Hooks can be used to deliver messages to low code solutions such as **Power Automate** or **Azure Logic Apps**. They can also be used for development platforms such as **Azure Functions**, [allowing for usage of the Azure DevOps SDK](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples/DevOps/ReleaseNotesGenerator) as well as other toolkits and frameworks.
 
 ### Creating a Web Hook
 
-Creating a web hook requires a subscription for events to be sent to as shown in the diagram above. Messages can be consumed by listeners interested in a particular event or topic. This architectural pattern known as Publish and Subscribe (Pub/Sub) allows DevOps to publish many types of messages and for subscribers to only be notified of events they are concerned about.
-
-When creating the subscription, there are a couple of things to keep in mind. First only project administrators will have access to edit and view subscriptions by default. This can be adjusted to grant privileges  to other users. Also, specific actions may be limited depending on which event type is chosen.[Create a service hooks subscription](https://docs.microsoft.com/en-us/azure/devops/service-hooks/create-subscription?view=azure-devops) programmatically.
+Creating a web hook requires a subscription for events to be sent to as shown in the diagram above. Messages can be consumed by listeners interested in a particular event or topic. This architectural pattern known as Publish and Subscribe (Pub/Sub) allows **Azure DevOps** to publish many types of messages and for subscribers to only be notified of events they are concerned about.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ReleasePipeline-PreDeployment-ReleaseGates-POST.JPG" style="zoom:50%;" />
 
 ### Example: Web Hooks in Action
 
-A real world example of using a web hook came up when I needed to come up with a solution for creating a notification that a build pipeline was started to migrate a Dynamics 365 solution to another environment for testing. Typically, I would first look to notifications as detailed above. However in this particular scenario, I needed to provide additional detail from other platforms that are used for work item tracking outside of Azure DevOps. The solution needed to provide an update to the development team that their work was being promoted and the ability to track the work items.
+A real world example of using a web hook came up when I needed to come up with a solution for creating a notification that a build pipeline was started to migrate a **Dynamics 365** solution to another environment for testing. Typically, I would first look to notifications as detailed above. However in this particular scenario, I needed to provide additional detail from other platforms that are used for work item tracking outside of **Azure DevOps**. The solution needed to provide an update to the development team that their work was being promoted and the ability to track the work items.
 
-In this scenario, the solution I settled on four services: Azure DevOps Web Hooks, Power Automate Flows, [Microsoft Adaptive Cards](https://adaptivecards.io/) and Microsoft Teams. Azure DevOps Web Hooks were used to fire an event to Power Automate which was listening for an HTTP request. Power Automate would then query the 3rd party work item tracking service for detailed on work items. From there Power Automate would create an Adaptive Card. The Adaptive Card was designed to provide direct links back to the 3rd part work item service and to the Azure DevOps Build, currently in progress. Finally, the Adaptive Card was sent to a Microsoft Teams Channel for distribution.
+In this scenario, the solution I settled on four services: **Azure DevOps Web Hooks**, **Power Automate Flows**, **[Microsoft Adaptive Cards](https://adaptivecards.io/)** and **Microsoft Teams**. **Azure DevOps Web Hooks** were used to fire an event to **Power Automate,** which was listening for an HTTP request. **Power Automate** would then query the 3rd party work item tracking service for detailed on work items. From there, **Power Automate** would create an **Adaptive Card**. The **Adaptive Card** was designed to provide direct links back to the 3rd part work item service and to the **Azure DevOps Build**, currently in progress. Finally, the **Adaptive Card** was sent to a **Microsoft Teams Channel** for distribution.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/WebHookToTeamsAdaptiveCard.gif" style="zoom:50%;" />
 
-For sample code and further documentation, please refer to this link.
+For sample code and further documentation, please [refer to this link](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples/DevOps/PowerAutomate).
 
 ## Next Steps
 
@@ -134,4 +132,5 @@ Your feedback is **<u>extremely valuable</u>** so please leave a comment below a
 
 ## Index
 
-[Monitoring the Power Platform: Introduction and Index](
+[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
+
