--- a/docs/08.02 - Monitoring-Azure-DevOps - Using API to Monitor and Report.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using API to Monitor and Report.md
@@ -1,4 +1,4 @@
-# Monitoring the Power Platform: Azure DevOps - Using the REST API and Scenarios
+# Monitoring the Power Platform: Azure DevOps - Using the REST API to Monitor Pipelines
 
 ## Summary
 
@@ -34,9 +34,9 @@ For a detailed description of how to choose the right authentication mechanism, 
 VERB https://dev.azure.com/{organization}/_apis[/{area}]/{resource}?api-version={version}
 ```
 
-You should leverage API versioning when working with REST APIs to avoid breaking changes. **Azure DevOps REST API** offers backwards compatibility with this approach. The API versioning reference is located [here](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#api-and-tfs-version-mapping). Its key to the subsequent calls below so be sure to make a point to review the reference regularly. 
+You should leverage API versioning when working with **Azure DevOps REST APIs** to avoid breaking changes. **Azure DevOps REST API** offers backwards compatibility with this approach. The API versioning reference is located [here](https://docs.microsoft.com/en-us/rest/api/azure/devops/?view=azure-devops-rest-5.1#api-and-tfs-version-mapping). **<u>Its key to the subsequent calls below so be sure to make a point to review the reference regularly.</u>** 
 
-**<u>NOTE</u>**: In the PowerShell examples provided below, I'll be providing **<u>a parameter approach for supplying the API version which is helpful to quickly update to a newer version</u>**.
+**<u>NOTE</u>**: In the **PowerShell** examples provided below, I'll be providing **<u>a parameter approach for supplying the API version which is helpful to quickly update to a newer version</u>**.
 
 #### Sample Request and Response
 
@@ -88,15 +88,15 @@ $environmentsUrl = "$($devopsBaseUrl)$($projectId)/_apis/distributedtask/environ
 $environments = Invoke-RestMethod -Uri $environmentsUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
-The output for each environment includes the identifier, name, description and creation properties.
+The output for each environment **includes the identifier, name, description and creation properties**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetEnvironemnt.PowerShell.PNG"  />
 
-#### Environment Deployment History and 
+#### Environment Deployment History
 
 **Environments** allow **Azure DevOps** administrators the ability to review and manage each deployment. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. 
 
-Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (*orchestrations and divisions of labor) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (*sequential tasks*) details. Below is an example of a **PowerShell** script to request deployment records on a specific environment using the **[Environment Deployment Records REST API]()**.
+Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (*orchestrations and divisions of labor*) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (*sequential tasks*) details. Below is an example of a **PowerShell** script to request deployment records on a specific environment using the **[Environment Deployment Records REST API]()**.
 
 ```
 $environmentDeploymentRecordsUrl = "$($devopsBaseUrl)$($projectId)/_apis/distributedtask/environments/$($envirommentId)/environmentdeploymentrecords?$($apiVersion)"
@@ -113,13 +113,11 @@ Here is an **example showing usage of the Environment and [Environment Deploymen
 
 #### Quick Note on Security Checks
 
-Each deployment, that meets security checks, will be included within the **[Execution Record REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord)** result list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. 
+Each deployment, that meets security checks, will be included within the **[Execution Record REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord)** result list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. 
 
-That said, using **Web Hooks**, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. 
+Using **Web Hooks**, as discussed in the [Web Hooks section](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---notifications-and-service-hooks#web-hooks) of the article "[**Azure DevOps - Notifications and Service Hooks**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---notifications-and-service-hooks)", we can see acknowledgement of a pending approval. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.ApprovalCheck.WebHook.PNG" style="zoom:50%;" />
-
-In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the **Azure DevOps REST API**.
 
 ## Build Pipelines
 
@@ -134,7 +132,7 @@ Each build can be drilled into using the **Azure DevOps REST API** to find out a
 Using the following **PowerShell** command, we can review the status of any particular build of interest. For the below example, I had previously scanned the [**Build Definition** REST API](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/definitions/get?view=azure-devops-rest-6.1) for builds.
 
 ```
-$buildUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)?api-version=5.1-preview.2";
+$buildUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)?$($apiVersion)";
 $build = Invoke-RestMethod -Uri $buildChangesUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
@@ -146,14 +144,14 @@ In the above example, we can see that **<u>the build number, the status and resu
 
 #### Build Changes and Work Items
 
-Each build mostly likely is associated with changes made by a team of developers or support engineers. **<u>During the typical DevOps process, branches are created, code is crafted and merged with Pull Requests</u>**. Below is an example of a sample commit and pull request triggering a build.
+Each build most likely is associated with changes made by a team of developers or support engineers. **<u>During the typical DevOps process, branches are created, code is crafted and merged with Pull Requests</u>**. Below is an example of a sample commit and pull request triggering a build.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.DevOpsGUI.PNG"  />
 
 With the **Azure DevOps REST API**, we can review the location and identifiers to help monitor the code changes in each build. 
 
 ```
-$buildChangesUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/changes?api-version=5.1-preview.2";
+$buildChangesUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/changes?$($apiVersion)";
 $buildChanges = Invoke-RestMethod -Uri $buildChangesUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
@@ -161,7 +159,7 @@ $buildChanges = Invoke-RestMethod -Uri $buildChangesUrl -Method Get -ContentType
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.PowerShell.PNG" style="zoom:50%;" />
 
-This is essential to helping automate release notes that include references to each commit and approval. Post deployment, analysts can review and determine gaps in the current process. **<u>This feedback loop is important to internal teams to continuous improve and optimize the code delivery process.</u>**
+This is essential to [helping automate release notes](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---orchestrating-deployments-and-automating-release-notes) that include references to each commit and approval. Post deployment, analysts can review and determine gaps in the current process. **<u>This feedback loop is important to internal teams to continuous improve and optimize the code delivery process.</u>**
 
 #### Build Work Items
 
@@ -170,7 +168,7 @@ Each build also brings along information about each work item associated to it. 
 Here is a sample **PowerShell** script requesting associated work item referenced in a build run.
 
 ```
-$buildWorkItemsUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/workitems?api-version=5.1-preview.2";
+$buildWorkItemsUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/workitems?$($apiVersion)";
 $buildWorkItems = Invoke-RestMethod -Uri $buildWorkItemsUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
@@ -181,7 +179,7 @@ Each build can contain artifacts that can be retained and used by other builds, 
 Here is sample **PowerShell** script showing how to request the published artifacts from a build run.
 
 ```
-$buildArtifactsUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/artifacts?api-version=5.1-preview.2";
+$buildArtifactsUrl = "$($devopsBaseUrl)$($projectId)/_apis/build/builds/$($buildId)/artifacts?$($apiVersion)";
 $buildArtifacts = Invoke-RestMethod -Uri $buildArtifactsUrl -Method Get -ContentType "application/json" -Headers $header
 ```
 
@@ -234,7 +232,7 @@ Below is a list of the **Azure DevOps REST API** operations for **Environments**
 
 In this article we have worked with **Azure DevOps** externally. Using the SDK or REST API, **Azure DevOps** can be explored in detail, allowing us to reimagine how we consume and work with the service.
 
-Previously we looked at setting up notifications and web hooks to popular services. Continuing from here, we will look into more collaboration opportunities. We will review Chat Bots and integrations with **Microsoft Teams**. For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
+Previously we looked at [setting up notifications and web hooks to popular services](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---notifications-and-service-hooks). Continuing from here, we will look into more [collaboration opportunities. We will review Chat Bots and integrations with **Microsoft Teams**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---orchestrating-deployments-and-automating-release-notes). For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
@@ -242,5 +240,5 @@ Your feedback is **<u>extremely valuable</u>** so please leave a comment below a
 
 ## Index
 
-[Monitoring the Power Platform: Introduction and Index](
+[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
 
