--- a/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
+++ b/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
@@ -4,21 +4,21 @@
 
 [DevOps](https://azure.microsoft.com/en-us/overview/what-is-devops/) has become more and more ingrained into our **Power Platform** project lifecycle. Work item tracking and feedback tools for teamwork. Continuous integration and delivery for code changes and solution deployments. Automated testing for assurance, compliance and governance considerations. Microsoft's tool, **[Azure DevOps](https://azure.microsoft.com/en-us/overview/what-is-devops/#culture)** provides native capabilities to plan, work, collaborate and deliver. Each step along the way in our [**Power Platform DevOps** journey](https://docs.microsoft.com/en-us/power-platform/alm/devops-build-tools) can be tracked and monitored which will be the primary objective of this article.
 
-
+In this article, we will focus on **integrating Azure DevOps with Microsoft Teams to help coordinate and collaborate during a deployment**. We will explore the various bots and how to set them up. From there we will walk through a sample scenario involving multiple teams working together. Finally, we will look to automate release notes using web hooks and **Azure Function**.
 
 ## Sources
 
-Sources of Azure DevOps events that impact our delivery can come from virtually any area of the platform including work items, pipelines, source control, testing and artifact delivery. For each one of these events, such as completed work items, we can setup visualizations such as charts based on defined queries. Service hooks and notification subscriptions can be configured to allow real time reporting of events to external parties and systems allowing for us to stay in a state of continuous communication and collaboration.
+Sources of **Azure DevOps** events that impact our delivery can come from virtually any area of the platform including work items, pipelines, source control, testing and artifact delivery. For each one of these events, such as completed work items, we can setup visualizations such as charts based on defined queries. Service hooks and notification subscriptions can be configured to allow real time reporting of events to external parties and systems allowing for us to stay in a state of continuous communication and collaboration.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 ## Microsoft Teams, Continuous Collaboration and Integration
 
-Azure DevOps bots with Microsoft Teams has quickly grown into one of my favorite features. [Azure DevOps dashboards and kanban boards can be added to channels for visualizations of progress](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops). 
+**<u>Azure DevOps bots with Microsoft Teams has quickly grown into one of my favorite features</u>**. For instance, [Azure DevOps dashboards and kanban boards can be added to channels for visualizations of progress](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops) as shown below.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/WorkItems-Dashboard-TeamsEmbedded.JPG" style="zoom:50%;" />
 
-Multiple Azure DevOps bots can be configured to deliver messages to and from Microsoft Teams to allow for continuous collaboration across multiple teams and channels. These bots can work with [Azure Pipelines](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/microsoft-teams?view=azure-devops), [work items](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops) and [code pull requests](https://docs.microsoft.com/en-us/azure/devops/repos/integrations/repos-teams?view=azure-devops).
+Multiple **Azure DevOps** bots can be configured to deliver messages to and from **Microsoft Teams** to allow for continuous collaboration across multiple teams and channels. These bots can work with [Azure Pipelines](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/microsoft-teams?view=azure-devops), [work items](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops) and [code pull requests](https://docs.microsoft.com/en-us/azure/devops/repos/integrations/repos-teams?view=azure-devops).
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams-Azure-DevOps-Bots.JPG"  />
 
@@ -32,39 +32,39 @@ For monitoring and orchestrating deployments across our various teams, the Azure
 
 ### Configuring the Azure Pipelines Bot in Microsoft Teams
 
-Use the "subscriptions" keyword  with the Azure Pipelines bot to review and modify existing subscriptions and add new ones. 
+Use the "***subscriptions***" keyword  with the **Azure Pipelines bot** to review and modify existing subscriptions and add new ones. 
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions.JPG" style="zoom:50%;" />
 
-In the above example, we are subscribing to any changes in stages or approvals for a specific release pipeline. Its recommend to filter to a specific pipeline to reduce clutter in our Teams messaging. The Azure Pipeline bot, using actions described in the article "", can be further filtered by build statuses. This is helpful to isolate the messages delivered to a specific Teams channel.
+In the above example, we are subscribing to any changes in stages or approvals for a specific release pipeline. **<u>Its recommend to filter to a specific pipeline to reduce clutter in our Teams messaging</u>**. **The Azure Pipeline bot**, using actions described in the article "**[Azure DevOps - Notifications and Service Hooks](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---notifications-and-service-hooks#web-hooks)**", can be further filtered by build statuses. This is helpful to isolate the messages delivered to a specific Teams channel.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Subscriptions-Filter.JPG" style="zoom:50%;" />
 
-Once configured, as soon as our pipeline begins to run, Microsoft Teams will begin to receive messages. Below is an example showing the deployment of a specific release including stages and approval requests. What I find nice about this is that Microsoft Teams works on both my mobile devices and even Linux based operating systems, allowing any team on any workload to utilize this approach.
+Once configured, as soon as our pipeline begins to run, **Microsoft Teams** will begin to receive messages. Below is an example showing the deployment of a specific release including stages and approval requests. What I find nice about this is that **Microsoft Teams** **works on both my mobile devices and even Linux based operating systems**, allowing any team on any workload to utilize this approach.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Notifications-Thread-GatedApproval.JPG" style="zoom:50%;" />
 
-I also want to point out that Azure DevOps also has the ability to natively integrate with other 3rd party tools such as [Slack](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/slack?view=azure-devops) (Similar to the Teams bots), [ServiceNow](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/servicenow?view=azure-devops) and [Jenkins](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/integrate-jenkins-pipelines-cicd?view=azure-devops&tabs=yaml).
+I also want to point out that **Azure DevOps** also has the ability to natively integrate with other 3rd party tools such as [Slack](https://docs.microsoft.com/en-us/azure/devops/pipelines/integrations/slack?view=azure-devops) (Similar to the Teams bots), [ServiceNow](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/servicenow?view=azure-devops) and [Jenkins](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/integrate-jenkins-pipelines-cicd?view=azure-devops&tabs=yaml).
 
 ## Release Pipelines
 
 #### Quality Deployments
 
-https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/gates?view=azure-devops&viewFallbackFrom=vsts
-
-Deployments within a release pipeline allow for numerous ways to integrate monitoring into Azure DevOps processes. Each deployment include pre and post conditions which can be leveraged to send events and metrics. For instance, the Azure Function gate can be used to invoke a micro service that writes to App Insights, creates ServiceNow tickets or even Kafka events. The possibilities are endless, imagine sending messages back to the Power Platform for each stage of a deployment!
+**Deployments** within a release pipeline allow for numerous ways to integrate monitoring into **Azure DevOps** processes. [Each deployment include pre and post conditions](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/gates?view=azure-devops) which can be leveraged to send events and metrics. For instance, the **Azure Function** gate can be used to invoke a micro service that writes to **Azure Application Insights**, creates **ServiceNow** tickets or even **Kafka** events. The possibilities are endless, imagine sending messages back to the **Power Platform** for each stage of a deployment!
 
 ##### Approvals
 
-Pre and Post approvals can be added to each job in the release pipeline. Adding these can assist during a complex deployment requiring coordination between multiple teams dispersed geographically. Shown below is a hypothetical setup of multiple teams each with specific deliverables as part of a release. 
+[Pre and Post approvals](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/gates?view=azure-devops&viewFallbackFrom=vsts) can be added to each job in the release pipeline. Adding these can assist during a complex deployment requiring coordination between multiple teams dispersed geographically. Shown below is a hypothetical setup of multiple teams each with specific deliverables as part of a release. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.TeamsChannels.PNG" style="zoom:50%;" />
 
-In this scenario, a core solution needs to be deployed and installed before relying features can begin. When any of the steps in the delivery process begins, the originating team needs to be notified in case of any issues that come up. Using approvals allows the lead of the specific feature team to align the resources and communicate to the broader team that the process can move forward.
+In this scenario, a core solution needs to be deployed and installed before relying features can begin. When any of the steps in the delivery process begins, the originating team needs to be notified in case of any issues that come up. 
+
+**<u>Using approvals allows the lead of the specific feature team to align the resources and communicate to the broader team that the process can move forward.</u>** The full example can be found below.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Teams-Overview.JPG" style="zoom:50%;" />
 
-Here is an example of an approval within Microsoft Teams, notifying the lead of the core solution team that the import process is ready. The approval request shows the build artifacts (e.g. solutions, code files, etc), the branch and pipeline information.
+Here is an example of an approval within **Microsoft Teams**, notifying the lead of the core solution team that the import process is ready. The approval request shows the build artifacts (e.g. solutions, code files, etc), the branch and pipeline information.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/DevOps/Teams-Azure-Pipelines-Notifications-Thread-GatedApproval-Filtered-Team.JPG" style="zoom:50%;" />
 
@@ -86,39 +86,27 @@ Deployment gates can also **invoke REST API endpoints**. **<u>This could be used
 
 ## Using Build Pipelines or Release Pipelines
 
-In the previous section I described how to introduce quality gates to a release securing each stage of the pipeline. Release pipelines are useful
+In the previous section I described how to introduce quality gates to a release securing each stage of the pipeline. **Release pipelines are useful** to help control and coordinate deployments. That said, **environments and build pipelines allow for use of YAML templates** which are flexible across both **Azure DevOps** and **GitHub** and **allow for teams to treat pipelines like other source code**.
 
 ### Environments
 
-[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions.
-
-### Scenario: Securing Current Deployments
-
-In this scenario, we will attempt to secure our Power Platform environment using security checks and policies. With build environments we can configure conditions such as only releasing during specific time frames, approvals from stakeholders, azure function responses or even requiring templates and tasks. In the below example, we will require three conditions to be met before releasing to an environment: Approvals from team members, required extends templates and artifact policy enforcement.
+[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in **Azure DevOps** allow for **<u>targeted deployment of artifacts to a collection of resources</u>**. In the case of the **Power Platform**, this can be thought of **<u>a release to an Power Platform environment</u>**. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions.
 
 ### Environment Security Checks
 
-Environment security checks, as mentioned above, can provide quality gates similar to the current capabilities of Release Pipelines. Below is an example of the current options, I've highlighted the ones I'm using in this scenario.
+**Environment security checks**, as mentioned above, can provide quality gates similar to the current capabilities of **Release Pipelines**. Below is an example of the current options compared to [**Release Pre and Post Deployment Quality Gates**](https://docs.microsoft.com/en-us/azure/devops/pipelines/release/approvals/gates?view=azure-devops).
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.Checks.Overview.PNG" style="zoom:50%;" />
 
-Compare this to the Release Pipeline Pre or Post Deployment Quality Gates.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ReleasePipeline-PreDeployment-ReleaseGates.JPG" style="zoom: 67%;" />
-
-Environments allow DevOps administrators the ability to review and manage each deployment. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. 
+Here is an example of linking to a template in **GitHub**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.RequiredTemplate.GitHubSourced.PNG" style="zoom:50%;" />
 
-Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details. For each deployment record we can find out a wealth of information. Build definitions, plans, stages, jobs are all shown. The start and finish timings and statuses are also shown, helping engineers determine where things may have gone wrong.
+Compare this to the **Release Pipeline Pre or Post Deployment Quality Gates**.
 
-#### Quick Note on Security Checks
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ReleasePipeline-PreDeployment-ReleaseGates.JPG" style="zoom: 67%;" />
 
-Each deployment, that meets security checks, will be included within the execution record REST API list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. That said, using Web Hooks, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Environment.ApprovalCheck.WebHook.PNG" style="zoom:50%;" />
-
-In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
 
 ## Scenario: Orchestrating a Release
 
@@ -126,11 +114,13 @@ In this scenario we can be notified, other checks currently do not allow for fle
 
 In the above example, we have a multi-stage release pipeline that encompasses multiple teams from development to support to testing. The pipeline relies on multiple artifacts and code branches for importing and testing. 
 
-In this example, we have a core solution containing Dynamics 365 entity changes that are needed by integrations. They will need to lead the deployment and test and notify the subsequent teams that everything has passed and can move on. Below is an example of coordination between the deployment team and the Core team lead.
+In this example, we have a core solution containing **Dynamics 365** entity changes that are needed by integrations. They will need to lead the deployment and test and notify the subsequent teams that everything has passed and can move on. 
+
+Below is an example of coordination between the deployment team and the Core team lead.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Ochestrate Release with Teams.gif" style="zoom:50%;" />
 
-Below is an image showing the entire release deployment with stages completed.
+Below is an image **showing the entire release deployment with stages** completed.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.AllUp.PNG" style="zoom:50%;" />
 
@@ -152,7 +142,7 @@ The sample code for generating **Azure DevOps** release notes using an **Azure F
 
 In this article we have worked with **Azure DevOps** externally. Using the SDK or REST API, **Azure DevOps** can be explored in detail, allowing us to reimagine how we consume and work with the service.
 
-Previously we looked at setting up notifications and web hooks to popular services. Continuing from here, we will look into more collaboration opportunities. We will review Chat Bots and integrations with **Microsoft Teams**. For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
+[Previously we looked at setting up notifications and web hooks to popular services](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---notifications-and-service-hooks#web-hooks). We then reviewed [the **Azure DevOps REST API** to better understand build pipelines and environments.](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---using-the-rest-api-to-monitor-pipelines)
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
@@ -160,5 +150,5 @@ Your feedback is **<u>extremely valuable</u>** so please leave a comment below a
 
 ## Index
 
-[Monitoring the Power Platform: Introduction and Index](
+[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
 
